# kv-store

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
benches/: kvstore_bench.rs
examples/: basic_usage.rs  compaction.rs  large_dataset.rs  persistence.rs
src/: lib.rs  main.rs  store.rs
src/store/: compaction.rs  config.rs  engine.rs  index.rs  record.rs  segment.rs  stats.rs
tests/: store_integration.rs
